# cairn-code

./: .coderabbit.yaml  .gitignore  CAIRN.md  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  benchmark.py  deny.toml  go.mod  go.sum
.cairn/: config.json
.github/: CODEOWNERS
.github/workflows/: ci.yml
cmd/cairn-code/: main.go  register_posix.go  register_windows.go
internal/agent/: agent.go  agent_test.go  streaming_test.go
internal/config/: config.go  config_test.go
internal/cost/: cost.go  cost_test.go
internal/llm/: anthropic.go  anthropic_test.go  factory.go  ollama.go  openai.go  openai_test.go  opencode.go  opencode_test.go  provider.go
internal/session/: session.go  session_test.go
internal/tools/: bash_test.go  file_edit_test.go  file_read_test.go  file_write_test.go  git.go  github_issue.go  glob_test.go  go.go  grep.go  grep_test.go  memory.go  powershell.go  powershell_test.go  pull_request.go  registry_test.go  todo.go  todo_test.go  web_search.go
internal/ui/: repl.go
pkg/diff/: diff_test.go
screenshots/: agent-action.tape  print-mode.tape  repl-startup.tape  test.tape
src/: agent.rs  clipboard_image.rs  config.rs  cost.rs  http_client.rs  json.rs  lib.rs  main.rs  markdown.rs  notify.rs  oauth.rs  openai_reset.rs  redact.rs  session.rs  skills.rs  theme.rs  tui.rs
src/llm/: anthropic.rs  mod.rs  ollama.rs  openai.rs  openai_compat.rs  opencode.rs  opengateway.rs  openrouter.rs  provider.rs  xai.rs
src/mcp/: client.rs  mod.rs  tools.rs
src/tools/: commit_attribution.rs  file_edit.rs  file_history.rs  file_read.rs  file_undo.rs  file_write.rs  git_tool.rs  glob_tool.rs  go_tool.rs  grep_tool.rs  memory.rs  mod.rs  powershell_tool.rs  (+10 more)
tests/: cli_security.rs  exec_mode.rs  print_mode.rs
