[package]
name = "cairn-code"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Open terminal coding agent"
repository = "https://github.com/Cairn/cairn-code"
readme = "README.md"

[dependencies]
cap-fs-ext = "4.0.2"
cap-std = "4.0.2"
keyring = "4.1.5"
ratatui = "0.30.2"
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
