[package]
name = "cairn-code"
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
license = "MIT"
description = "Open terminal coding agent"
repository = "https://github.com/Cairn/cairn-code"
readme = "README.md"

[dependencies]
cap-fs-ext = "4.0.2"
cap-std = "4.0.2"
glob = "0.3.2"
keyring = "4.1.5"
ratatui = "0.30.2"
regex = "1.12.2"
serde_json = { version = "1.0.151", features = ["arbitrary_precision"] }
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }
